# indicator-toggl

./: README.md  meson.build  meson_post_install.py
data/: com.github.tom95.indicator-toggl  com.github.tom95.indicator-toggl.appdata.xml  com.github.tom95.indicator-toggl.desktop
debian/: changelog  control  copyright  rules
schemas/: com.github.tom95.indicator-toggl.gschema.xml
src/: TogglIndicator.vala  TogglMenu.vala
src/pages/: NoTokenPage.vala  TrackingPage.vala
src/services/: TogglApi.vala  TogglSettings.vala
